*SVN*

* Make cold_deploy call update instead of deploy (to avoid invoking the restart task).

* Make the touch command run by update_code set the TZ to UTC, for consistent setting of asset timestamps. [NeilW]

* Fix off-by-one bug in show_tasks width-computation [NeilW]

*1.3.1* (January 5, 2007)

* Fix connection problems when using gateways [Ezra Zygmuntowicz]

*1.3.0* (December 23, 2006)

* Deprecate rake integration in favor of invoking `cap' directly [Jamis Buck]

* Make sure the CVS module references the repository explicitly in cvs_log [weyus@att.net]

* Remove trace messages when loading a file [Jamis Buck]

* Cleaner error messages for authentication failures and command errors [Jamis Buck]

* Added support for ~/.caprc, also -x and -c switches. [Jamis Buck]

* Updated migrate action to use db:migrate task in Rails instead of the deprecated migrate task [DHH]

* Allow SSH user and port to be encoded in the hostname strings [Ezra Zygmuntowicz]

* Fixed that new checkouts were not group-writable [DHH, Jamis Buck]

* Fixed that cap setup would use 755 on the deploy_to and shared directory roots instead of 775 [DHH]

* Don't run the cleanup task on servers marked no_release [Jamis Buck]

* Fix typo in default_io_proc so it correctly checks the stream parameter to see if it is the error stream [Stephen Haberman]

* Make sure assets in images, javascripts, and stylesheets are touched after updating the code, to ensure the asset timestamping feature of rails works correctly [Jamis Buck]

* Added warning if password is prompted for and termios is not installed [John Labovitz]

* Added :as option to sudo, so you can specify who the command is executed as [Mark Imbriaco]

*1.2.0* (September 14, 2006)

* Add experimental 'shell' task [Jamis Buck]

* Display file for external configurations, rather than inspected proc. [Jamis Buck]

* Connect to multiple servers in parallel, rather than serially. [Jamis Buck]
